objects/cwbtool__Component__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Level__c</fullName>
        <label>Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>cwbtool__Component__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cwbtool__RootId__c</fullName>
        <label>Root Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>